fixing the spacing on the footer

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -5,7 +5,7 @@
 // ---------------------------------------------
 footer {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: flex-end;
 
   padding: 1rem;
